--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -9,6 +9,8 @@ body {
 
 .app {
   &-content {
+    width: 100%;
+    height: 100dvh;
     transition: opacity 0.3s ease;
   }
   &.invisible {
@@ -18,10 +20,13 @@ body {
 }
 
 .home {
+  width: 100%;
+  height: 100%;
+
   &-inner {
     position: relative;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
   }
 
   &-blur {
